# linux-hello

./: CMakeLists.txt  Cargo.toml  README.md  config.toml  flake.nix
.github/: dependabot.yml
.github/workflows/: rust.yml  update-flake-lock.yml
cycle-controller/: Cargo.toml
dlib/: Cargo.toml
dlib-support/: Cargo.toml
dlib-support/src/: face.rs  face_recognition.rs  lib.rs  threaded_face_recognition.rs
dlib-sys/: Cargo.toml  build.rs
dlib-sys/src/: chip_details.rs  cv_image.rs  face_recognition_resnet_model_v1.rs  frontal_face_detector.rs  full_object_detection.rs  image_window.rs  lib.rs  matrix.rs  matrix_descriptor.rs  overlay_line.rs  rectangle.rs  shape_predictor.rs  wrapper.hpp
dlib-sys/src/wrapper/: core.cpp  cv_image.cpp  face_recognition.cpp  face_recognition_resnet_model_v1.cpp  frontal_face_detector.cpp  full_object_detection.cpp  image_window.cpp  matrix.cpp  matrix_descriptor.cpp  overlay_line.cpp  rectangle.cpp  shape_predictor.cpp
dlib/src/: face.rs  face_recognition.rs
linux-hello/: Cargo.toml
linux-hello/src/: config.rs  cycle_controller.rs  main.rs  state.rs  types.rs  utils.rs
linux-hello/src/cli/: add.rs  download.rs  list.rs  live.rs  mod.rs  test.rs
linux-hello/src/config/: face_recognition.rs  mod.rs  modes.rs  shape_predictor.rs  video.rs
linux-hello/src/core/: camera.rs  display.rs  face_add.rs  face_manager.rs  face_recognition.rs  login.rs  mod.rs  video_capture_thread.rs
linux-hello/src/data/: face.rs  identity.rs  mod.rs  user.rs
nix/: default.nix  package.nix
opencv-sys/: Cargo.toml  build.rs
opencv-sys/src/: gui.rs  lib.rs  mat.rs  video_capture.rs  wrapper.hpp
opencv-sys/src/wrapper/: core.cpp
railwork/: Cargo.toml
railwork/src/: action.rs  batch.rs  cycle_controller.rs  filter.rs  lib.rs  link.rs  produce.rs  sync.rs  transform.rs
railwork/src/nodes/: cycle.rs  mod.rs  produce.rs  thread.rs  transform.rs
