[package]
name = "dlib-sys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

build = "build.rs"
links = "dlib-1"

[dependencies]
cxx = "1.0.124"
autocxx = "0.27.0"

opencv-sys = {path = "../opencv-sys/"}
serde = "1.0.204"

[build-dependencies]
pkg-config = "0.3.31"

autocxx-build = "0.27.0"
miette = { version = "5", features = ["fancy"] } # optional but gives nicer error messages!
