[package]
name = "linux-hello"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

build = "build.rs"

[dependencies]
log = "0.4.21"
env_logger = "0.11.3"
opencv-sys = {path = "../opencv-sys/"}
dlib-sys = {path = "../dlib-sys/"}
dlib-support = {path = "../dlib-support/"}
railwork = {path = "../railwork/"}
clap = { version = "4.5.4", features = ["derive"] }
ambassador = "0.3.6"
shadow-rs = "0.27.1"
color-eyre = "0.6.3"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
reqwest = { version = "0.12.4", features = ["blocking"] }
once_cell = "1.19.0"
figment = { version = "0.10.18", features = ["toml", "env"] }
nix = { version = "0.28.0", features = ["user"] }
# tokio = { version = "1.37.0" }

[build-dependencies]
shadow-rs = "0.27.1"
