[package]
name = "linux-hello"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

build = "build.rs"

[dependencies]
log = "0.4.22"
env_logger = "0.11.5"
opencv-sys = {path = "../opencv-sys/"}
dlib-sys = {path = "../dlib-sys/"}
dlib-support = {path = "../dlib-support/"}
railwork = {path = "../railwork/"}
clap = { version = "4.5.11", features = ["derive"] }
ambassador = "0.4.1"
shadow-rs = "0.35.1"
color-eyre = "0.6.3"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
reqwest = { version = "0.12.5", features = ["blocking"] }
once_cell = "1.19.0"
figment = { version = "0.10.19", features = ["toml", "env"] }
nix = { version = "0.29.0", features = ["user"] }
crossbeam-channel = "0.5.13"
cxx = "1.0.124"
# tokio = { version = "1.37.0" }
comfy-table = "7.1.1"
tikv-jemallocator = "0.6.0"

[build-dependencies]
shadow-rs = "0.35.1"
